# Laboratorio-Ucv-Kedro-Poetry-Gha-Sonar

./: pyproject.toml  sonar-project.properties
si-image-processing-lab/: pyproject.toml
si-image-processing-lab/conf/base/: parameters.yml
si-image-processing-lab/src/si_image_processing/pipelines/imagen_processing/: nodes.py  pipeline.py
si-image-processing-lab/tests/: test_image_processing.py
