[project]
requires-python = ">=3.10"
name = "si_image_processing_lab"
readme = "README.md"
dynamic = [
    "version",
]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro~=1.4.0",
    "kedro-datasets>=9.3.0,<10.0.0",
    "pillow>=12.2.0,<13.0.0",
]
[tool.poetry]
name = "si-image-processing-lab"
version = "0.1.0"
description = "Laboratorio profesional de procesamiento de imágenes con Kedro, Poetry, GitHub Actions y SonarQube"
authors = ["UCV - Ingeniería de Sistemas"]
readme = "README.md"
packages = [{ include = "si_image_processing", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
kedro = "~1.4.0"
kedro-datasets = ">=9.3.0,<10.0.0"
pillow = ">=12.2.0,<13.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.6.0"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.kedro]
package_name = "si_image_processing"
project_name = "si-image-processing-lab"
kedro_init_version = "1.4.0"
tools = []
example_pipeline = "False"
source_dir = "src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.kedro_telemetry]
project_id = "1bab0b16f774435b97150d768af8b5f7"
